cabal-version:      3.0
name:               hello-cloudflare-hs
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bach
maintainer:         info@thomasbach.dev

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:  API
                    , Cloudflare
                    , Cloudflare.Application
                    , Cloudflare.Request
                    , Cloudflare.Response

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.13 && <5
                    , aeson >=1.4 && <2
                    , asterius-prelude >=0.0.1 && <0.1
                    , bytestring >=0.10 && <1
                    , case-insensitive >=1.2 && <2
                    , http-types >=0.12 && <1
                    , servant-server >=0.16 && <1
                    , text >=1.2 && <2
                    , wai >=3.2 && <4
                    , wai-middleware-caching >=0.1 && <1
    hs-source-dirs:   src
    default-language: Haskell2010

executable hello-cloudflare-hs
    main-is:          Main.hs
    ghc-options:      -optl--export-function=handleReq

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    hello-cloudflare-hs
                    , base >=4.13 && <5
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hello-cloudflare-hs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
