cabal-version:      3.0
name:               cloudflare-middleware
version:            0.1.0.0
synopsis:           Servant middleware for Cloudflare

homepage:           https://github.com/thomasbach-dev/hello-cloudflare-hs

license:            BSD-3-Clause
author:             Thomas Bach
maintainer:         info@thomasbach.dev

category:           Network

library
    exposed-modules:  Cloudflare
                    , Cloudflare.Application
                    , Cloudflare.Request
                    , Cloudflare.Response

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13
                    , asterius-prelude ^>=0.0.1g
                    , bytestring ^>=0.10
                    , case-insensitive ^>=1.2
                    , http-types ^>=0.12
                    , text ^>=1.2
                    , wai ^>=3.2
                    , wai-middleware-caching ^>=0.1
    hs-source-dirs:   src
    default-language: Haskell2010
