cabal-version:      3.0
name:               hello-cloudflare-worker
version:            0.1.0.0
synopsis:           Worker of the Hello Cloudflare service

homepage:           https://github.com/thomasbach-dev/hello-cloudflare-hs

license:            BSD-3-Clause
author:             Thomas Bach
maintainer:         info@thomasbach.dev

executable hello-cloudflare
    main-is:          Main.hs
    ghc-options:      -optl--export-function=handleReq

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13
                    , cloudflare-middleware
                    , hello-cloudflare-api
    hs-source-dirs:   app
    default-language: Haskell2010
